--- a/page-1.html
+++ b/page-1.html
@@ -2,15 +2,15 @@
 <html dir="auto" lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Privacy - My Page Title</title>
+	<title>Privacy - Eternal Witness</title>
 
-	<meta name="description" content="My Page Description" />
+	<meta name="description" content="Eternal Witness" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="icon" href="assets/favicon.png" />
+	<link rel="icon" href="content/image/8iglxg4ersqjwcad06pl.png" />
 
-	<meta property="og:title" content="Privacy - My Page Title" />
-	<meta property="og:description" content="My Page Description" />
-	<meta property="og:image" content="assets/og-image.png" />
+	<meta property="og:title" content="Privacy - Eternal Witness" />
+	<meta property="og:description" content="Eternal Witness" />
+	<meta property="og:image" content="content/image/re4ehnqmco3c2cq4uiil.png" />
 
 	<link rel="stylesheet" href="assets/tobi.css" />
 	<link rel="stylesheet" href="assets/style.css" />
